@@ -3,11 +3,10 @@ package com.tripflow.catalog_service.service;
 import com.tripflow.catalog_service.dto.request.TripRequestDTO;
 import com.tripflow.catalog_service.dto.response.TripResponseDTO;
 import com.tripflow.catalog_service.exception.ResourceNotFoundException;
-import com.tripflow.catalog_service.mapper.TripMapper;
 import com.tripflow.catalog_service.model.Trip;
 import com.tripflow.catalog_service.repository.TripRepository;
 import com.tripflow.catalog_service.repository.TripSpecification;
-import com.tripflow.catalog_service.service.TripService;
+import org.modelmapper.ModelMapper;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,21 +14,21 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+@Service
 public class TripServiceImpl implements TripService {
-    private final TripMapper tripMapper;
+    private final ModelMapper modelMapper;
     private final TripRepository tripRepository;
 
-    public TripServiceImpl(TripMapper tripMapper, TripRepository tripRepository) {
-        this.tripMapper = tripMapper;
+    public TripServiceImpl(ModelMapper modelMapper, TripRepository tripRepository) {
+        this.modelMapper = modelMapper;
         this.tripRepository = tripRepository;
     }
 
     @Override
     @Transactional
     public TripResponseDTO createTrip(TripRequestDTO requestDTO, UUID organizerId) {
-        Trip trip = tripMapper.toEntity(requestDTO);
+        Trip trip = modelMapper.map(requestDTO, Trip.class);
 
         trip.setOrganizerId(organizerId);
 
@@ -37,7 +36,7 @@ public class TripServiceImpl implements TripService {
 
         //fare chiamata con rabbitmq appena capisco come si usa
 
-        return tripMapper.toResponseDTO(savedTrip);
+        return modelMapper.map(savedTrip, TripResponseDTO.class);
     }
 
     @Override
@@ -46,7 +45,7 @@ public class TripServiceImpl implements TripService {
         Trip trip = tripRepository.findById(id).orElseThrow(()
                 -> new ResourceNotFoundException("viaggio non trovato con id: " + id));
 
-        return tripMapper.toResponseDTO(trip);
+        return modelMapper.map(trip, TripResponseDTO.class);
     }
 
     @Override
@@ -59,20 +58,13 @@ public class TripServiceImpl implements TripService {
             throw new RuntimeException("Non hai i permessi per modificare questo viaggio");
         }
 
-        existingTrip.setName(requestDTO.getName());
-        existingTrip.setDestination(requestDTO.getDestination());
-        existingTrip.setStartDate(requestDTO.getStartDate());
-        existingTrip.setEndDate(requestDTO.getEndDate());
-        existingTrip.setPrice(requestDTO.getPrice());
-        existingTrip.setAvailableSpots(requestDTO.getAvailableSpots());
-        existingTrip.setDescription(requestDTO.getDescription());
-        existingTrip.setImages(requestDTO.getImages());
+        modelMapper.map(requestDTO, existingTrip);
 
         Trip updatedTrip = tripRepository.save(existingTrip);
 
         //sempre rabbitmq
 
-        return tripMapper.toResponseDTO(updatedTrip);
+        return modelMapper.map(updatedTrip, TripResponseDTO.class);
     }
 
     @Override
@@ -95,7 +87,8 @@ public class TripServiceImpl implements TripService {
     public List<TripResponseDTO> getTripsByOrganizer(UUID organizerId) {
         List<Trip> trips = tripRepository.findByOrganizerId(organizerId);
 
-        return trips.stream().map(tripMapper::toResponseDTO).collect(Collectors.toList());
+        return trips.stream().map(trip -> modelMapper.map(trip, TripResponseDTO.class))
+                .toList();
     }
 
     @Override
@@ -108,8 +101,8 @@ public class TripServiceImpl implements TripService {
         List<Trip> trips = tripRepository.findAll(spec);
 
         return trips.stream()
-                .map(tripMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(trip -> modelMapper.map(trip, TripResponseDTO.class))
+                .toList();
     }
 }
 
